--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "fanat/project",
     "require": {
-        "symfony/validator": "^3.2"
+        "symfony/validator": "^3.2",
+        "twbs/bootstrap": "^3.3"
     },
     "autoload": {
         "psr-4": {
